2009-12-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.cs: Check that apache mime DB exists before
	  trying to read it.

2009-12-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.cs: Don't return an invalid application from
	  GetAllApplications. Fixes "Bug 552403 - Right clicking Open
	  With -> List of programs to open with on a file results in
	  an exception".

2009-11-20  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.addin.xml: Fix author.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MacPlatform.addin.xml: Bump MD version.

2009-10-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Menus/OSXMenu.cs: Oops, fix menu item index. With last few
	  commits, fixes Bug 545151 - Dynamic submenus in Mac main
	  menu don't work.

2009-10-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Menus/OSXMenu.cs: Set the refcon in dynamic submenus, so the
	  command can be run.

2009-10-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Menus/OSXMenu.cs: Handle array separators, try 3.

2009-10-08  Michael Hutchinson  <mhutchinson@novell.com>

	* Menus/OSXMenu.cs: Fix separators in arrays commands, try 2.

2009-10-08  Michael Hutchinson  <mhutchinson@novell.com>

	* Menus/OSXMenu.cs: Fix separators in dynamic submenus.

2009-10-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MacUpdater.cs: Add csdk updateinfo file. Remove the hack for
	  forcing Mono updateinfos as it won't work with the
	  architectural variations of the Mono packages.

2009-10-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Commands.cs:
	* MacUpdater.cs:
	* UpdateDialog.cs: Add workaround for updating older versions
	  of Mono that don't have updateinfo file. Clean up API.

2009-10-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MacUpdater.cs: Tidy up.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MacPlatform.addin.xml: Bump MD version.
