@@ -1,5 +1,13 @@
 2009-12-03  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* MacPlatform.cs:
+	* Framework/Carbon.cs: Try to set the process name using
+	  private carbon API, to make sure that the main menu displays
+	  correctly, even on 2.6 previews and when started from a
+	  launch script directly.
+
+2009-12-03  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* MacPlatform.cs: Check that apache mime DB exists before
 	  trying to read it.
 
